GP-0 ignore reserved SaveState key when restoring AnalysisStateInfo